changelog for all my changes as i make them so i dont forget again.
v0.7.4.1:
fixed a crash with the fleet inflater.
v0.7.4:
save compatible with 0.7.3+
new:
    stated work on a new industry that lets you change the population type of a normal market between a normal market, and a AI-Pop market, at a cost.
        -this industry is only kinda working. it has a option to enable in the config
fixes:
    fixed an edge case crash that was happening for some reason after you got your first AI-Pop market
    fixed the build time for some buildings.
v0.7.3:
not save compatible with any older version.
fixes:
    made it so you get the robot forge ability after visiting an market when you have the robot forge hullmod.
    AIRetrofit hullmod:
        reduced how bloated the modular opp cost of AI Retrofit hullmod was (from 27 hullmods + 27 scripts to 10 hullmods and 1 script)
        (hopefully) made the description of the hullmod respect what ship you are looking at, and stop giving wildly inaccurate guesses on the opp costs of this hullmod.
    found a AI market:
        (hopefully) fixed the buggy nature of the script that sometimes caused issues (thanks Histidine, for helping with that issue)

balance:
    AI-Pop market growth:
        changed the robot factory set of buildings to now produce population on market/system/faction, depending on upgrade level.
            lv0: provides 3 * size growth to the world its built on
            lv1: provides 5 * size growth, divided between to all friendly AI-Pop markets in system (based on each worlds market size)
            lv2: provides 10 * size growth, divided between all same faction AI-Pop markets in the sector (based on each worlds market size)
    industry cost, build time, and upkeep cost:
        a lot of old industry's were overpriced. i thought they would produce credits but you need demand for a good to sell it.
        reduced cost of all industries by a lot.