@@ -5,6 +5,7 @@ import com.fs.starfarer.api.campaign.econ.Industry;
 import com.fs.starfarer.api.impl.campaign.population.PopulationComposition;
 import com.fs.starfarer.api.ui.TooltipMakerAPI;
 import data.scripts.AIWorldCode.SupportCode.AIretrofit_canBuild;
+import data.scripts.CrewReplacer_Log;
 import data.scripts.crew_replacer_startup;
 
 public class AIRetrofit_AIRetrofitPurgeOption extends AIRetrofit_IndustryBase{
@@ -43,7 +44,7 @@ public class AIRetrofit_AIRetrofitPurgeOption extends AIRetrofit_IndustryBase{
         }
         float purgeProgress = buildSet - getBuildProgress();
         while(market.getSize() > minSize && purgeProgress <= getUpgradeTime(market.getSize())){
-            crew_replacer_startup.loging("reducing size at: " + purgeProgress + " req " + getUpgradeTime(market.getSize()),this,true);
+            CrewReplacer_Log.loging("reducing size at: " + purgeProgress + " req " + getUpgradeTime(market.getSize()),this);
             market.setSize(market.getSize()-1);
         }
         /*if(getBuildProgress() >= 0){
